# weather-forecast

./: .env.local  .gitignore  Cargo.toml  Dockerfile.local  README.md  docker-compose.local.yml
.github/workflows/: job.yaml
weather-forecast-job/: Cargo.toml  Dockerfile.deployment
weather-forecast-job/migrations/2024-03-03-114519_create_historical_weather_daily_records/: down.sql  up.sql
weather-forecast-job/src/: main.rs  schema.rs
weather-forecast-job/src/command/: historical_weather.rs  mod.rs
weather-forecast-job/src/repository/: historical_weather.rs  mod.rs
weather-forecast-job/src/service/: mod.rs  open_meteo.rs
